--- a/resurse/css/pagina-produs.css
+++ b/resurse/css/pagina-produs.css
@@ -1,40 +1,51 @@
-section#art-produs {
+section.art-produs {
 	padding: 0;
 	overflow: hidden;
 }
 
-#art-produs h2 {
+.art-produs h2,
+.art-produs h3.nume {
 	text-align: center;
 	background-color: var(--culoare-marcaj);
 }
 
-#art-produs table {
+.art-produs h3.nume a {
+	text-decoration: none;
+	color: black;
+}
+
+.art-produs h3.nume a:hover {
+	transition: all 0.2s linear;
+	color: var(--color6);
+}
+
+.art-produs table {
 	border: 1px solid var(--color6);
 	border-spacing: 0;
 }
 
-#art-produs table .celula-tabel-produs {
+.art-produs table .celula-tabel-produs {
 	border: 2px solid var(--color6);
 	padding-left: 10px;
 	padding-right: 10px;
 	text-align: center;
 }
 
-#art-produs table tbody tr:nth-child(2n + 1) > td,
-#art-produs table tbody tr:nth-child(2n + 1) > th {
+.art-produs table tbody tr:nth-child(2n + 1) > td,
+.art-produs table tbody tr:nth-child(2n + 1) > th {
 	background-color: var(--culoare-marcaj);
 }
 
-#art-produs table tbody tr:nth-child(2n) > td,
-#art-produs table tbody tr:nth-child(2n) > th {
+.art-produs table tbody tr:nth-child(2n) > td,
+.art-produs table tbody tr:nth-child(2n) > th {
 	background-color: rgba(51, 49, 51, 0.15);
 }
 
-#art-produs table thead th {
+.art-produs table thead th {
 	background-color: rgba(51, 49, 51, 0.15);
 }
 
-#art-produs table tr:hover {
+.art-produs table tr:hover {
 	transition: all 0.2s linear;
 	background-color: rgb(245, 255, 100, 0.6);
 }
@@ -53,29 +64,47 @@ section#art-produs {
 	row-gap: 50px;
 }
 
-#art-produs .tabel-produs {
+.container-produs-cos {
+	margin-top: 50px;
+	margin-bottom: 30px;
+	margin-left: var(--padding-section);
+	margin-right: var(--padding-section);
+	display: grid;
+	grid-template-areas:
+		"z-tabel z-imagine"
+		"z-buton z-buton";
+	grid-template-columns: 1fr 1fr;
+	row-gap: 50px;
+}
+
+.art-produs .tabel-produs {
 	grid-area: z-tabel;
 }
 
-#art-produs .imag-produs {
+.art-produs .imag-produs {
 	grid-area: z-imagine;
 	text-align: center;
 }
-#art-produs .descriere-produs {
+.art-produs .descriere-produs {
 	grid-area: z-descriere;
 }
-#art-produs .categorie-produs {
+.art-produs .categorie-produs {
 	grid-area: z-categorie;
 }
 
-#art-produs .tag-produs {
+.art-produs .div-buton {
+	grid-area: z-buton;
+	text-align: center;
+}
+
+.art-produs .tag-produs {
 	background-color: var(--culoare-marcaj);
 	padding-left: 10px;
 	padding-right: 10px;
 	border-radius: 8px;
 }
 
-#art-produs .tag-produs:hover {
+.art-produs .tag-produs:hover {
 	transition: all 0.2s linear;
 	background-color: rgb(245, 255, 100, 0.6);
 }
@@ -91,6 +120,27 @@ section#art-produs {
 	color: black;
 }
 
+.buton {
+	width: auto;
+	height: 40px;
+	background-color: var(--color2);
+	color: var(--color6);
+	border-radius: 8px;
+	border: 1px solid var(--color6);
+	text-align: center;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.buton:hover {
+	transition: all 0.1s linear;
+	background-color: var(--color4);
+}
+
+#sectiune-cumpara {
+	text-align: center;
+}
+
 @media screen and (max-width: 700px) {
 	.container-produs {
 		display: grid;
@@ -99,6 +149,14 @@ section#art-produs {
 			"z-tabel"
 			"z-descriere"
 			"z-categorie";
+		grid-template-columns: 1fr;
+	}
+	.container-produs-cos {
+		display: grid;
+		grid-template-areas:
+			"z-imagine"
+			"z-tabel"
+			"z-buton";
 		grid-template-columns: 1fr;
 	}
 }
