--- a/views/fragmente/footer.ejs
+++ b/views/fragmente/footer.ejs
@@ -24,8 +24,8 @@
     <section id="copyright" class="sectiune-footer">
         <p><small>Copyright &copy;2022BikeAddiction</small><time datetime="2022-02-19T18:25:10+03:00"> </time></p>
     </section>
-    <!-- <section>
+    <section id="sectiune-cookie">
         <p id="banner-cookie">Acesta este un proiect scolar. Acceptati cookie-urile de pe site? <button id="ok-cookies">Ok</button></p>
-    </section> -->
+    </section>
     <a href="#" title="Mergi sus" id="link-top"><div id="triunghi">&#5123;</div></a>
 </footer>
