--- a/views/fragmente/head.ejs
+++ b/views/fragmente/head.ejs
@@ -31,4 +31,4 @@
         })
     </script>
 <% } %> 
-<script src="/resurse/js/cookies.js"></script>
+<script src="/resurse/js/cookies.js" pageURL="<%- locals.pageURL %>"></script>
