--- a/views/pagini/produs.ejs
+++ b/views/pagini/produs.ejs
@@ -12,7 +12,7 @@
     <%- include("../fragmente/header") %>
 
     <main>
-        <section id="art-produs">
+        <section class="art-produs">
                 <article>
                     <h2><span class="nume"><%- locals.prod.nume %></span></h2>
 
