--- a/resurse/css/style.css
+++ b/resurse/css/style.css
@@ -130,7 +130,7 @@ section {
 	grid-area: z-program;
 	text-align: center;
 }
-#calendar {
+#calendar-section {
 	/* zona 3*/
 	grid-area: z-calendar;
 }
@@ -152,6 +152,7 @@ section {
 #date-site {
 	/* zona 7 */
 	grid-area: z-date-site;
+	text-align: center;
 }
 #biciclete {
 	grid-area: z-biciclete;
@@ -187,6 +188,70 @@ section {
 	display: none;
 }
 
+#date-site p {
+	margin-top: 20px;
+}
+
+#date-site p > span {
+	font-weight: bold;
+}
+
+/***************** calendar ***********************/
+
+#calendar-section {
+	text-align: center;
+	padding-bottom: 30px;
+}
+
+#calendar-section h2 {
+	margin-bottom: 30px;
+}
+
+#calendar-section p {
+	margin-bottom: 10px;
+}
+
+#calendar {
+	display: grid;
+	grid-template-columns: repeat(7, 1fr);
+	grid-gap: 0.2rem;
+}
+
+#calendar div {
+	text-align: center;
+}
+
+#calendar div:nth-child(n + 8).zi {
+	border: 1px solid black;
+	text-align: center;
+}
+
+#calendar div:nth-child(n + 8).eveniment {
+	background-color: var(--culoare-mov);
+}
+
+#calendar div:nth-child(2n + 9) {
+	background-color: var(--culoare-marcaj);
+}
+
+#calendar div:nth-child(2n + 8) {
+	background-color: rgba(51, 49, 51, 0.15);
+}
+
+#calendar .faded {
+	border: 1px solid black;
+	color: rgba(0, 0, 0, 0.4);
+}
+
+#calendar-section .fas:hover {
+	transition: all 0.1s linear;
+	color: var(--color6);
+}
+
+#calendar-section span {
+	display: inline;
+}
+
 /***************** footer *************************/
 footer {
 	display: grid;
@@ -206,12 +271,64 @@ footer {
 	padding: 0;
 	margin: 0;
 }
+#sectiune-cookie {
+	/* grid-area: z-cookie; */
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
+	background-color: var(--color6);
+	margin-bottom: 0;
+	margin-left: 0;
+	border-radius: 0;
+	font-size: 1.2em;
+	animation-name: animatie-cookie;
+	animation-timing-function: linear;
+	animation-duration: 1s;
+	animation-iteration-count: 1;
+	animation-fill-mode: forwards;
+}
+
+@keyframes animatie-cookie {
+	0% {
+		opacity: 0;
+		transform: translate(0px, 120px);
+	}
+	70% {
+		opacity: 0.5;
+		transform: translate(0px, -20px);
+	}
+	100% {
+		opacity: 1;
+		transform: translate(0px, 0px);
+	}
+}
+
+#ok-cookies {
+	width: auto;
+	height: 40px;
+	background-color: var(--color2);
+	color: var(--color6);
+	border-radius: 8px;
+	border: 1px solid var(--color6);
+	text-align: center;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-left: 20px;
+}
+
+#ok-cookies:hover {
+	transition: all 0.1s linear;
+	background-color: var(--color4);
+}
+
 .sectiune-footer {
 	background-color: var(--color3);
 	border: 0;
 	color: var(--color6);
 	font-size: 0.7em;
 }
+
 address span {
 	color: var(--color6);
 	font-size: 1.2em;
@@ -271,6 +388,29 @@ p small {
 
 #informatii a:hover {
 	transform: all 0.1s linear;
+	text-decoration: underline;
+}
+
+/************************ istoric *****************************/
+
+#istoric {
+	margin: var(--margine-main);
+	background-color: var(--color5);
+	border: 4px solid var(--color5);
+	padding: 0;
+	border-radius: 10px;
+	color: var(--color6);
+	font-size: 0.7em;
+	padding-left: 15px;
+}
+
+#istoric a {
+	color: var(--color6);
+	text-decoration: none;
+}
+
+#istoric a:hover {
+	transition: all 0.1s linear;
 	text-decoration: underline;
 }
 
