--- a/views/fragmente/header.ejs
+++ b/views/fragmente/header.ejs
@@ -37,7 +37,12 @@
             </ul>
         </li>
         <!-- <li><a href="signup.html">Sign Up</a></li> -->
-        <li><a href="/contact">Contact</a><div></div></li>
+        <li><a href="/contact">Contact</a><div></div>
+            <ul class="submeniu">
+                <li><a href="/forum">Forum</a></li>
+                <li><a href="/chat">Chat</a></li>
+            </ul>
+        </li>
         <li><a href="/produse">Produse</a><div></div>
             <ul class="submeniu">
                 <% for(let categProdus of locals.categProduse){  %>
