--- a/views/fragmente/footer.ejs
+++ b/views/fragmente/footer.ejs
@@ -14,7 +14,7 @@
             <h2>Informatii:</h2>
             <ul>
                 <li><a href="resurse/documente/GDPR.pdf" download="GDPR.pdf">GDPR: Drepturile Consumatorului (descarca document)</a></li>
-                <li><a href="metodePlata.html">Metode de plata</a></li>
+                <li><a href="/metodePlata">Metode de plata</a></li>
                 <li><a href="https://anpc.ro/" target="_blank">ANPC</a></li>
                 <li><a href="/terms">Termeni si conditii</a></li>
                 <li><a href="/privacy">Politica de confidentialitate</a></li>
