--- a/views/pagini/index.ejs
+++ b/views/pagini/index.ejs
@@ -37,7 +37,7 @@
                         <h3>Biciclete</h3>
                         <p>Esti foarte aproape sa-ti gasesti bicicleta mult dorita iar acesta este locul potrivit unde sa o cauti.</p>
                         <figure class="media-content">
-                            <figcaption><a href="biciclete.html">Biciclete</a></figcaption>
+                            <figcaption><a href="/produse?tip=biciclete">Biciclete</a></figcaption>
                             <picture>
                                 <source srcset="resurse/imagini/biciclete500.jpg" media = "(max-width:500px)"/>
                                 <source srcset="resurse/imagini/biciclete1000.jpg" media = "(max-width:1000px)"/>
@@ -51,7 +51,7 @@
                             sa iti iei toate piesele de schimb trebuinciose pentru a-ti face bicicleta ca noua. 
                         </p>
                         <figure class="media-content">
-                            <figcaption><a href="piese.html">Piese pentru biciclete</a></figcaption>
+                            <figcaption><a href="/produse?tip=piese">Piese pentru biciclete</a></figcaption>
                             <picture>
                                 <source srcset="resurse/imagini/piese500.jpg" media = "(max-width:500px)"/>
                                 <source srcset="resurse/imagini/piese1000.jpg" media = "(max-width:1000px)"/>
@@ -63,7 +63,7 @@
                         <h3>Accesorii</h3>
                         <p><i lang="en">Setup</i>-ul nu este complet daca nu ai si propriile tale ustensile pentru a-ti ingriji bicicleta. In aceasta sectiune gasesti toate accesoriile de care ai nevoie pentru bicicleta ta.</p>
                         <figure class="media-content">
-                            <figcaption><a href="accesorii.html">Accesorii pentru biciclete</a></figcaption>
+                            <figcaption><a href="/produse?tip=accesorii">Accesorii pentru biciclete</a></figcaption>
                             <picture>
                                 <source srcset="resurse/imagini/accesorii500.jpg" media = "(max-width:500px)"/>
                                 <source srcset="resurse/imagini/accesorii1000.jpg" media = "(max-width:1000px)"/>
@@ -75,7 +75,7 @@
                         <h3>Echipamente</h3>
                         <p>Sectiune destinata echipamentelor pentru ciclism.</p>
                         <figure class="media-content">
-                            <figcaption><a href="Echipamente.html">Echipamente ciclism</a></figcaption>
+                            <figcaption><a href="/produse?tip=echipamente">Echipamente ciclism</a></figcaption>
                             <picture>
                                 <source srcset="resurse/imagini/echipamente500.jpg" media = "(max-width:500px)"/>
                                 <source srcset="resurse/imagini/echipamente1000.jpg" media = "(max-width:1000px)"/>
